add basic style and js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="character-list">
+        
+        </div>
+        <div class="one-character">
+        <h3>GAME OF THRONES</h3>
+        <div class="searchbar">
+            <button id="search-button"> > </button>
+            <input type="text" id="search-text" placeholder="Search a character">
+        </div>
+        </div>
+    </div>
+    <script src="/js/got.js"></script>
 </body>
 </html>
