modified css add icon

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GOT</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
         <div class="character-list">
         
         </div>
-        <div class="one-character">
+        <div class="one-character"> 
         <h3>GAME OF THRONES</h3>
         <div class="searchbar">
-            <button id="search-button"> > </button>
+            <button id="search-button"><i class="fas fa-angle-right"></i></button>
             <input type="text" id="search-text" placeholder="Search a character">
         </div>
         </div>
